<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.dataset_editing.SelectPictureFragment">

    <Button
        android:id="@+id/button_save_select_picture_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/purple_500"
        android:enabled="false"
        android:text="@string/AddPicture_saveButtonText"
        app:layout_constraintTop_toBottomOf="@id/selectPictureGuideline2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView_select_picture_preview"
        android:contentDescription="@string/SelectPicture_previewContentDescription"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@id/selectPictureGuideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/question_mark" />

    <Button
        android:id="@+id/button_select_category_select_picture_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/AddPicture_selectCategoryButtonText"
        app:layout_constraintBottom_toTopOf="@id/selectPictureGuideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/selectPictureGuideline1"
        tools:ignore="ButtonStyle" />

    <Button
        android:id="@+id/button_choose_picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SelectPicture_choosePictureButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/selectPictureGuideline1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/selectPictureGuideline3"
        tools:ignore="ButtonStyle" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/selectPictureGuideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/selectPictureGuideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.92" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/selectPictureGuideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.78" />

</androidx.constraintlayout.widget.ConstraintLayout>
